--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
- CONNECTION_URL = mongodb+srv://user:user@cluster0.azepx.mongodb.net/myFirstDatabase?
+ CONNECTION_URL = mongodb+srv://user:yedkfyh@cluster0.azepx.mongodb.net/myFirstDatabase?
  retryWrites=true&w=majority
